# impostor_in_sign

./: .env.example  .gitignore  docker-compose.yml  readme.md  requirements.txt
.github/workflows/: mypy.yml  pylint.yml
apps/airflow/: Dockerfile
apps/airflow/dags/: main.py
apps/api/: Dockerfile  pyproject.toml  readme.md
apps/api/src/: auth_utils.py  main.py  user_utils.py
apps/api/test/: api_test.py
apps/aplication_initializer/: Dockerfile  pyproject.toml
apps/aplication_initializer/src/: main.py
apps/application_initializer/: Dockerfile  pyproject.toml  readme.md
apps/application_initializer/src/: main.py
apps/database/: create_database.py
apps/db_connector/: pyproject.toml
apps/db_connector/src/: db_connector.py
apps/hand_detector/: pyproject.toml  readme.md
apps/hand_detector/src/: hand_detector.py  main.py
apps/inference_model/: Dockerfile  pyproject.toml  readme.md
apps/inference_model/src/: main.py
apps/mlflow/: Dockerfile  readme.md
apps/web/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx
apps/web/src/components/: achievement_card.tsx  amongus_letter.tsx  author.tsx  avatar_ranking.tsx  gameover.tsx  level-up.tsx  ranking.tsx
apps/web/src/pages/: home.tsx  not-found.tsx
apps/web/src/pages/dashboard/: image-grid.tsx  image-upload.tsx  login-form.tsx  photo-card.tsx
apps/web/src/pages/game/: game-home.tsx  game-play.tsx  help-menu.tsx  results.tsx
apps/web/src/store/: game-state.tsx
database/: create_database.py
utils/: hand_points_detection.py
