[project]
name = "hand_detector"
version = "0.0.1"
authors = [
  { name="Samuel Espejo Gil", email="samuel.espejo@alu.uclm.es" },
  { name="Elena Ballesteros Morallón", email="elena.ballesteros2@alu.uclm.es" },
]
description = "Implementation of hand points detector using mediapipe"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "pymongo==4.10.1",
    "logging==0.4.9.6",
    "mediapipe==0.10.18",
    "opencv-python==4.7.0.68",
]

[project.urls]
"Repository" = "https://github.com/RedBed24/impostor_in_sign"
